# mz-ai-mini

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile
server/: .gitignore  docker-compose.dev.yml  main.py  pyproject.toml
server/api/migrations/: 0001_create_users.sql  0002_create_business_case_tables.sql  0003_add_user_profile_fields.sql  0004_add_business_case_tags.sql  0005_alter_business_case_case_id_to_varchar.sql  0006_add_membership_and_orders.sql  0007_create_consultation_requests.sql  0008_add_business_case_industry.sql  0009_drop_business_case_document_cover_image_url.sql  0010_add_business_case_type.sql  0011_add_business_case_summary_and_freshness_fields.sql  0012_create_case_research_tables.sql  0013_create_agent_auth_tables.sql  0014_add_agent_wechat_login.sql  0015_drop_agent_password_fields.sql  0016_add_agent_email_login.sql  run_sql_migrations.py
server/api/src/mz_ai_backend/: __init__.py
server/api/src/mz_ai_backend/core/: __init__.py  application.py  config.py  database.py  dependencies.py  error_codes.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  protocol.py  request_context.py
server/api/src/mz_ai_backend/modules/: __init__.py
server/api/src/mz_ai_backend/shared/: __init__.py  cos_storage.py  snowflake.py  wechat_pay.py
server/api/tests/: conftest.py
server/api/tests/agent_auth/application/: test_register_and_login_agent_account.py
server/api/tests/agent_auth/infrastructure/: test_email_delivery.py
server/api/tests/core/: test_config.py  test_delete_business_case.py  test_import_business_case_from_dir.py  test_init_schema_sql.py  test_protocol.py  test_request_context.py  test_seed_local_dev.py  test_setup_cloud_mysql.py  test_setup_cloud_postgres.py
server/docker/mysql/init/: 0001_create_databases.sql
server/docker/postgres/init/: 0001_create_databases.sql  0002_init_schema.sql
server/scripts/: delete_business_case.py  import_business_case_from_dir.py  seed_local_dev.py  setup_cloud_mysql.py  setup_cloud_postgres.py
ua-agent/backend/: pyproject.toml  pyrightconfig.json
ua-agent/backend/src/ua_agent/: __main__.py  cli.py
ua-agent/backend/tests/: conftest.py  test_library_contract.py  test_ping_contract.py
(+861 files in other folders)
