[project]
name = "ua-agent"
version = "0.1.0"
description = "ua-agent backend CLI"
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "platformdirs>=4.2",
    "httpx>=0.28.1",
    "funasr>=1.2",
    "torch>=2.1",
    "torchaudio>=2.1",
    "torchvision>=0.16",
    "transformers>=4.40",
    "openai-whisper>=20240930",
    "diffusers==0.30.2",
    "accelerate==0.28.0",
    "opencv-python==4.9.0.80",
    "soundfile==0.12.1",
    "huggingface_hub==0.30.2",
    "librosa==0.11.0",
    "einops==0.8.1",
    "omegaconf>=2.3.0",
    "ffmpeg-python==0.2.0",
    "moviepy>=1.0.3",
    "mmcv-lite==2.1.0",
    "mmdet>=3.3.0",
    "mmpose==1.1.0",
    "xtcocotools>=1.14.3",
]

[project.scripts]
ua-agent = "ua_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ua_agent"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
]

# Pull torch / torchaudio from PyTorch's CUDA 12.8 wheel index instead of
# PyPI's CPU-only default. Driver 580+ supports cu128 forward-compat.
# `explicit = true` keeps this index off the resolution path for any other
# package — only torch / torchaudio resolve through it.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]
xtcocotools = ["numpy"]
